<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterShopOwner">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintVertical_bias="0.0">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/pro_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/logo" />


            <androidx.appcompat.widget.AppCompatMultiAutoCompleteTextView
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/first_name"
                android:inputType="text"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatMultiAutoCompleteTextView
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/last_name"
                android:inputType="text"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatMultiAutoCompleteTextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/user_name"
                android:inputType="text"
                android:textSize="16sp" />


            <androidx.appcompat.widget.AppCompatMultiAutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/email"
                android:inputType="text"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatMultiAutoCompleteTextView
                android:id="@+id/contact_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/mobile_number"
                android:inputType="text"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatMultiAutoCompleteTextView
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/password"
                android:inputType="text|textPassword"
                android:textSize="16sp" />


            <androidx.appcompat.widget.AppCompatMultiAutoCompleteTextView
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="@string/confirm_password"
                android:inputType="text|textPassword"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerowner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>