<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".activity.Login">

    <ImageView
        android:id="@+id/imagelogo_login"
        android:layout_width="150dp"
        android:layout_height="150dp"

        android:src="@drawable/logo" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_boader_dark"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_boader_dark"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:editable="false"
        android:focusable="auto"
        android:focusableInTouchMode="false"
        android:hint="@string/don_t_have_an_account_sign_up"
        android:inputType="none" />

</androidx.appcompat.widget.LinearLayoutCompat>
