<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AddShops_ShopOwner">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:background="?android:attr/windowBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:background="@drawable/add_shops"
                    android:layout_alignParentStart="true"/>

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            android:padding="8dp">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/shop_img"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/add"
                android:src="@drawable/button_black"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/shop_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_boader_dark"
                android:hint="@string/shop_name"
                android:paddingStart="8dp"
                android:layout_margin="8dp"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/shop_address"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_boader_dark"
                android:hint="@string/shop_address"
                android:paddingStart="8dp"
                android:layout_margin="8dp"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/br_no"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_boader_dark"
                android:hint="@string/business_registration_no"
                android:paddingStart="8dp"
                android:layout_margin="8dp"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_boader_dark"
                android:hint="@string/email"
                android:paddingStart="8dp"
                android:layout_margin="8dp"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/contact_no"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_boader_dark"
                android:hint="@string/contact_no"
                android:paddingStart="8dp"
                android:layout_margin="8dp"
                android:textSize="18sp" />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/shop_owner_id"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/button_boader_dark"
                android:hint="@string/shop_owner_id_no"
                android:paddingStart="8dp"
                android:layout_margin="8dp"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/shop_owner_id_photo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="8dp"
                android:editable="false"
                android:drawableEnd="@drawable/cloud_upload_24"
                android:paddingEnd="8dp"
                android:background="@drawable/button_boader_dark"
                android:hint="@string/shop_owner_id_photo"
                android:layout_margin="8dp"
                android:textSize="18sp" />
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/br_photo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="8dp"
                android:editable="false"
                android:drawableEnd="@drawable/cloud_upload_24"
                android:paddingEnd="8dp"
                android:background="@drawable/button_boader_dark"
                android:hint="@string/business_registration_photo"
                android:layout_margin="8dp"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/shop_logo"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingStart="8dp"
                android:editable="false"
                android:drawableEnd="@drawable/cloud_upload_24"
                android:paddingEnd="8dp"
                android:background="@drawable/button_boader_dark"
                android:hint="@string/shop_logo"
                android:layout_margin="8dp"
                android:textSize="18sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/register"
                android:textStyle="bold"
                android:background="@drawable/button_background"
                android:gravity="center"
                android:textColor="#fff"
                android:textSize="18sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>